unpackaged/main/default/objects/Payment__c/fields/Amount2__c.field-meta.xml
<CustomField>
    <fullName>Amount2__c</fullName>
    <label>Amount</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>