unpackaged/main/default/objects/Payment__c/fields/Appr_Code__c.field-meta.xml
<CustomField>
    <fullName>Appr_Code__c</fullName>
    <description>Denotes the approval code when payment method is Credit Card (KBank)</description>
    <inlineHelpText>Denotes the approval code when payment method is Credit Card (KBank)</inlineHelpText>
    <label>Appr Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>