unpackaged/main/default/objects/Payment__c/fields/Opportunity_Record__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record__c</fullName>
    <description>Denotes the opportunity record that payment is created for</description>
    <inlineHelpText>Denotes the opportunity record that payment is created for</inlineHelpText>
    <label>Opportunity Record</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>