unpackaged/main/default/objects/Payment__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <description>Denotes the payment gateway that is integrated with PG system</description>
    <inlineHelpText>Denotes the payment gateway that is integrated with PG system</inlineHelpText>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>2c2p</fullName>
            </value>
            <value>
                <fullName>kbank</fullName>
            </value>
            <value>
                <fullName>enets</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>