unpackaged/main/default/objects/Payment__c/fields/Payment_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Long_ID__c</fullName>
    <description>This field represent the 18 digit ID of the record - PGAUTO-5085</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Long ID</label>
    <type>Text</type>
</CustomField>