unpackaged/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Denotes the payment method that is integrated with PG system</description>
    <inlineHelpText>Denotes the payment method that is integrated with PG system</inlineHelpText>
    <label>Payment Method (NS)</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>