unpackaged/main/default/objects/Payment__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <description>Denotes the payment mode</description>
    <inlineHelpText>Denotes the payment mode</inlineHelpText>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bank-transfer</fullName>
            </value>
            <value>
                <fullName>credit-card</fullName>
            </value>
            <value>
                <fullName>installment-plan</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>