unpackaged/main/default/objects/Payment__c/fields/Quote_Record__c.field-meta.xml
<CustomField>
    <fullName>Quote_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the quote record that payment is created for</description>
    <inlineHelpText>Denotes the quote record that payment is created for</inlineHelpText>
    <label>Quote Record</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>