unpackaged/main/default/objects/Payment__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Denotes the unique number generated after successful payment</description>
    <externalId>true</externalId>
    <inlineHelpText>Denotes the unique number generated after successful payment</inlineHelpText>
    <label>Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>