unpackaged/main/default/objects/Payment__c/validationRules/PG_Payment_ValidationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PG_Payment_ValidationDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Payment_Date__c &gt; TODAY() , 	NOT( Opportunity_Record__r.RecordType.Name=&#39;B2C Self-Serve&#39;))</errorConditionFormula>
    <errorMessage>Payment Creation Failed! 
Payment Date should not be a future date.</errorMessage>
</ValidationRule>