unpackaged/main/default/objects/Payment__c/validationRules/Reference_Num_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Num_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Reference_Number__c),
					NOT( Opportunity_Record__r.RecordType.Name=&#39;B2C Self-Serve&#39;),
    TEXT(Payment_Mode__c)=&#39;Offline&#39;,
               Opportunity_Record__r.Country__c=&#39;Thailand&#39;,
               Payment_Method__r.NS_Internal_ID__c &lt;&gt; &#39;28&#39;,
               Payment_Method__r.NS_Internal_ID__c &lt;&gt; &#39;29&#39;,
               Payment_Method__r.NS_Internal_ID__c &lt;&gt; &#39;7&#39;,
               Payment_Method__r.NS_Internal_ID__c &lt;&gt; &#39;32&#39;)</errorConditionFormula>
    <errorMessage>Payment Creation Failed!
		Reference Number is mandatory</errorMessage>
</ValidationRule>